# patch

./: .gitignore  AGENTS.md  README.md  pyproject.toml  sidecar_entry.py
scripts/: build-sidecar.sh
src/deck_link/: __init__.py  __main__.py  discovery.py  main.py  passphrase.py  protocol.py  server.py
src/deck_link/handlers/: __init__.py
ui/: package-lock.json  package.json
ui/src/: App.tsx  index.css
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/src/: main.rs
ui/src/components/: ChallengeScreen.tsx  ConnectedScreen.tsx  ConnectionScreen.tsx  Header.tsx  LocalInfo.tsx  ManualConnect.tsx  PassphraseInput.tsx  PeerList.tsx
ui/src/hooks/: useConnection.ts
ui/src/types/: index.ts
